Ported to JDK17