@@ -20,7 +20,13 @@ public class MNB {
                 }
             }
 
-            ProcessBuilder processBuilder = new ProcessBuilder("java", "-jar", jarPath, currency, startDate, endDate);
+            // ProcessBuilder a JAR futtatására a szükséges JVM paraméterrel
+            ProcessBuilder processBuilder = new ProcessBuilder(
+                    "java",
+                    "--add-opens", "java.base/java.lang=ALL-UNNAMED", // Hozzáadjuk a szükséges JVM paramétert
+                    "-jar", jarPath,
+                    currency, startDate, endDate
+            );
 
             // Parancs futtatása
             Process process = processBuilder.start();
@@ -30,22 +36,22 @@ public class MNB {
                 throw new RuntimeException("SOAP-MNB.jar futtatása sikertelen! Hibakód: " + exitCode);
             }
 
-            // 4. MNB.txt fájl megnyitása
+            // MNB.txt fájl megnyitása
             File file = new File("c:\\adatok\\MNB.txt");
             if (!file.exists()) {
                 throw new IOException("Nem található a letöltött MNB.txt fájl: " + file.getAbsolutePath());
             }
 
-            if(openResult) {
-                    // 5. c:\adatok mappa megnyitása
-                    if (Desktop.isDesktopSupported()) {
-                        Desktop.getDesktop().open(dataFolder);
-                    } else {
-                        throw new UnsupportedOperationException("A rendszer nem támogatja a mappanyitást");
-                    }
+            if (openResult) {
+                // c:\adatok mappa megnyitása
+                if (Desktop.isDesktopSupported()) {
+                    Desktop.getDesktop().open(dataFolder);
+                } else {
+                    throw new UnsupportedOperationException("A rendszer nem támogatja a mappanyitást");
+                }
 
-                    // Alapértelmezett rendszerprogrammal nyitja meg az MNB.txt-t
-                    Desktop.getDesktop().open(file);
+                // Alapértelmezett rendszerprogrammal nyitja meg az MNB.txt-t
+                Desktop.getDesktop().open(file);
             }
         } catch (Exception e) {
             // Hiba esetén felugró ablak jelenik meg
